--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
 
     <video autoplay muted loop class="background-video">
-        <source src="/videos/MVI_3034comprimido 2.mp4" type="video/mp4" />
+        <source src="./videos/MVI_3034comprimido 2.mp4" type="video/mp4" />
     </video>
 
     <section class="homer" id="home">
