--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Old Family Barber Shop</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet" />
@@ -26,7 +26,7 @@
                 <li><a class="linkmenu" href="#servicos">Serviços</a></li>
                 <li><a class="linkmenu" href="#agenda">Agendar</a></li>
                 <li>
-                    <a href="#home"><img class="logo" src="/img/logo.png" alt="" width="100px" /></a>
+                    <a href="#home"><img class="logo" src="./img/logo.png" alt="" width="100px" /></a>
                 </li>
                 <li><a class="linkmenu" href="#equipe">Equipe</a></li>
                 <li><a class="linkmenu" href="#localizacao">Localização</a></li>
@@ -35,7 +35,7 @@
     </header>
 
     <video autoplay muted loop class="background-video">
-        <source src="/videos/MVI_3034comprimido 2.mp4" type="video/mp4" />
+        <source src="./videos/MVI_3034comprimido 2.mp4" type="video/mp4" />
     </video>
 
     <section class="homer" id="home">
@@ -46,7 +46,7 @@
         <a class="btn-agendar" href=https://wa.link/3uf0ux">Angendar horário</a>
     </section>
     
-    <section class="servicos" id="servicos">
+    <!-- <section class="servicos" id="servicos">
             <div class="section-content">
                 <div class="servicos-tabela">
                     <table>
@@ -115,7 +115,7 @@
                 <h1>RODAPÉ</h1>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <script src="script.js"></script>
 </body>
