--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
   </head>
 
-  <body onload="hiddenLoading()">
+  <body>
     <div id="loading" class="loading">
       <div class="loadingio-spinner-eclipse-6oqtvp79t3t">
           <div class="ldio-ck8ifdwmneh"><div></div>
