--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
   </head>
 
   <body>
-    <div id="loading" class="loading">
+<!--     <div id="loading" class="loading">
       <div class="loadingio-spinner-eclipse-6oqtvp79t3t">
           <div class="ldio-ck8ifdwmneh"><div></div>
           </div>
-      </div>
+      </div> -->
   </div>
     <nav id="navigation">
       <div class="wrapper">
