--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Old Family Barber Shop</title>
 
     <link rel="stylesheet" href="style.css" />
-<!--     <link rel="stylesheet" href="loading.css"> -->
+    <link rel="stylesheet" href="loading.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,12 +22,12 @@
     />
   </head>
 
-  <body>
-<!--     <div id="loading" class="loading">
+  <body onload="hiddenLoading()">
+    <div id="loading" class="loading">
       <div class="loadingio-spinner-eclipse-6oqtvp79t3t">
           <div class="ldio-ck8ifdwmneh"><div></div>
           </div>
-      </div> -->
+      </div>
   </div>
     <nav id="navigation">
       <div class="wrapper">
