--- a/index.html
+++ b/index.html
@@ -467,15 +467,15 @@
         </div>
         <div class="col-b">
           <p>
-            ©2022 Old Family Barber Shop <br />
+            ©2024 Old Family Barber Shop <br />
             Todos os direitos reservados.
           </p>
           <p>
-            Criado por
+            Desenvolvido
             <a
               style="text-decoration: none; color: #fff"
-              href="https://www.instagram.com/llukascarvalho/"
-              >Lucas Carvalho
+              href="https://www.simplico.com.br/"
+              > <Simplico/>
             </a>
           </p>
         </div>
