--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
             <a
               style="text-decoration: none; color: #fff"
               href="https://www.simplico.com.br/"
-              > <Simplico/>
+              > &lt;Simplico/&gt;
             </a>
           </p>
         </div>
